Fixed youtube videoplayer in cards on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -394,7 +394,6 @@
 
     .youtube-container iframe {
         @apply w-full h-full rounded-lg;
-        pointer-events: none;
     }
 
     .close-video {
